unpackaged/main/default/objects/ET_Receipt__c/ET_Receipt__c.object-meta.xml
<CustomObject>
    <label>Receipt</label>
    <nameField>
        <displayFormat>R-{000000}</displayFormat>
        <label>Receipt Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Receipts</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>