unpackaged/main/default/objects/ET_Receipt__c/fields/ET_Amount__c.field-meta.xml
<CustomField>
    <fullName>ET_Amount__c</fullName>
    <label>Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>