unpackaged/main/default/objects/ET_Receipt__c/fields/ET_Coordinator__c.field-meta.xml
<CustomField>
    <fullName>ET_Coordinator__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Coordinator</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Customer_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>