unpackaged/main/default/objects/ET_Receipt__c/fields/ET_Finance_Document__c.field-meta.xml
<CustomField>
    <fullName>ET_Finance_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Finance Document</label>
    <referenceTo>ET_Finance_Document__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Customer_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>