unpackaged/main/default/objects/ET_Receipt__c/fields/ET_Service_Request__c.field-meta.xml
<CustomField>
    <fullName>ET_Service_Request__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Service Request</label>
    <referenceTo>ET_Service_Request__c</referenceTo>
    <relationshipLabel>Receipts</relationshipLabel>
    <relationshipName>Customer_Receipts</relationshipName>
    <type>Lookup</type>
</CustomField>