unpackaged/main/default/objects/ET_Receipt__c/fields/ETC_Vehicle_Bookings_Total__c.field-meta.xml
<CustomField>
    <fullName>ETC_Vehicle_Bookings_Total__c</fullName>
    <formula>ET_Service_Request__r.ETC_Billing_Total__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Vehicle Bookings Total</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>