unpackaged/main/default/objects/ET_Receipt__c/fields/ETST_Student_Name__c.field-meta.xml
<CustomField>
    <fullName>ETST_Student_Name__c</fullName>
    <formula>ET_Service_Request__r.ETST_Student_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Student Name</label>
    <type>Text</type>
</CustomField>