unpackaged/main/default/objects/ET_Receipt__c/fields/Location__c.field-meta.xml
<CustomField>
    <fullName>Location__c</fullName>
    <formula>IF(ET_Service_Request__r.ET_Location__r.Name = &#39;Sharjah Spea Inspection Centre&#39;, &#39;311001&#39;, ET_Coordinator__r.GL_Location_Code__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Location</label>
    <type>Text</type>
</CustomField>