unpackaged/main/default/objects/ET_Receipt__c/fields/Payable_Type__c.field-meta.xml
<CustomField>
    <fullName>Payable_Type__c</fullName>
    <label>Payable Type</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>ET</fullName>
            </value>
            <value>
                <fullName>SPEA</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>