unpackaged/main/default/objects/ET_Receipt__c/fields/Transaction_Type__c.field-meta.xml
<CustomField>
    <fullName>Transaction_Type__c</fullName>
    <formula>TEXT(ET_Service_Request__r.ETST_Transport_Type__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Transaction Type</label>
    <type>Text</type>
</CustomField>