unpackaged/main/default/objects/ET_Receipt__c/recordTypes/ET_Car_Services.recordType-meta.xml
<RecordType>
    <fullName>ET_Car_Services</fullName>
    <active>true</active>
    <label>ET Car Services</label>
</RecordType>