unpackaged/main/default/objects/ET_Receipt__c/recordTypes/ET_School_Transport.recordType-meta.xml
<RecordType>
    <fullName>ET_School_Transport</fullName>
    <active>true</active>
    <label>ET School Transport</label>
</RecordType>