unpackaged/main/default/objects/ET_Receipt__c/recordTypes/ET_SPEA.recordType-meta.xml
<RecordType>
    <fullName>ET_SPEA</fullName>
    <active>true</active>
    <label>ET SPEA</label>
</RecordType>