unpackaged/main/default/objects/ET_Receipt__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>RECORDTYPE</columns>
    <columns>CREATED_DATE</columns>
    <columns>ET_Finance_Document__c</columns>
    <columns>ET_Amount__c</columns>
    <columns>Account_Number__c</columns>
    <columns>Payment_Mode__c</columns>
    <columns>School_Oracle_Invoice_No__c</columns>
    <columns>Payable_Type__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>